codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__manual_compaction_pending.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
expression: "normalize_compaction_snapshot(render_bottom_popup(&chat, 80))"
---
Compacting context (<elapsed> • esc to interrupt)
  └ Making room to continue.


› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
